--- a/pages/styles/checkout.css
+++ b/pages/styles/checkout.css
@@ -496,7 +496,6 @@ header .nav #nav-icon {
 }
 
 .footer .business-info {
-  width: 25%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -507,6 +506,9 @@ header .nav #nav-icon {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 30px;
 }
 
@@ -618,10 +620,6 @@ header .nav #nav-icon {
   }
   .footer .map iframe {
     width: 100%;
-  }
-  .footer .business-info {
-    -webkit-transform: translateX(-30%);
-            transform: translateX(-30%);
   }
 }
 
