--- a/styles/_generals.scss
+++ b/styles/_generals.scss
@@ -543,10 +543,10 @@ header{
 
 
     .business-info{
-        width: 25%;
         display: flex;
         justify-content: start;
         flex-direction: column;
+        align-items: center;
         gap: 30px;
         .logo{
             width: max-content;
@@ -634,9 +634,9 @@ header{
             width: 100%;
         }
 
-        .business-info{
-            transform: translateX(-30%);
-        }
+        // .business-info{
+        //     transform: translateX(-30%);
+        // }
 
     }
     
