--- a/pages/styles/checkout.css
+++ b/pages/styles/checkout.css
@@ -506,9 +506,7 @@ header .nav #nav-icon {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  width: 25%;
   gap: 30px;
 }
 
@@ -621,6 +619,9 @@ header .nav #nav-icon {
   .footer .map iframe {
     width: 100%;
   }
+  .footer .business-info {
+    width: unset;
+  }
 }
 
 .footer .copywright {
@@ -638,6 +639,7 @@ header .nav #nav-icon {
           transform: translateX(-50%);
   text-align: center;
   color: #fff;
+  font-size: 0.8rem;
 }
 
 .footer .copywright .link {
@@ -671,6 +673,7 @@ aside {
           flex-direction: column;
   gap: 10px;
   padding: 5vh 0;
+  background-color: transparent;
 }
 
 aside .panel-toggle {
@@ -710,8 +713,18 @@ aside .aside-btn button:last-child {
     bottom: 3vh;
     right: 3vw;
     z-index: 99;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   aside .aside-btn {
+    background-color: #fff;
     display: none;
   }
   aside .fas.fa-bars {
@@ -722,6 +735,9 @@ aside .aside-btn button:last-child {
   }
   aside .panel-toggle {
     display: block;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
     color: teal;
     font-size: 1.2rem;
     border-radius: 10px;
@@ -744,6 +760,12 @@ aside .aside-btn button:last-child {
   }
   aside.active .aside-btn button {
     border-radius: 0;
+  }
+  aside.active .aside-btn button:first-child {
+    border-radius: 10px 10px 0 0;
+  }
+  aside.active .aside-btn button:last-child {
+    border-radius: 0 0 10px 10px;
   }
   aside.active .fas.fa-bars {
     display: none;
@@ -776,12 +798,14 @@ aside .aside-btn button:last-child {
   font-size: 2.5rem;
 }
 
+@media only screen and (max-width: 650px) {
+  .hero h1 {
+    text-align: center;
+  }
+}
+
 main {
   padding: 10vh 5vw;
-  background-color: #008080;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3CradialGradient id='a' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%230f1657'/%3E%3Cstop offset='1' stop-color='%23008080'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='750' x2='1550' y2='750'%3E%3Cstop offset='0' stop-color='%23084b6c'/%3E%3Cstop offset='1' stop-color='%23008080'/%3E%3C/linearGradient%3E%3Cpath id='s' fill='url(%23b)' d='M1549.2 51.6c-5.4 99.1-20.2 197.6-44.2 293.6c-24.1 96-57.4 189.4-99.3 278.6c-41.9 89.2-92.4 174.1-150.3 253.3c-58 79.2-123.4 152.6-195.1 219c-71.7 66.4-149.6 125.8-232.2 177.2c-82.7 51.4-170.1 94.7-260.7 129.1c-90.6 34.4-184.4 60-279.5 76.3C192.6 1495 96.1 1502 0 1500c96.1-2.1 191.8-13.3 285.4-33.6c93.6-20.2 185-49.5 272.5-87.2c87.6-37.7 171.3-83.8 249.6-137.3c78.4-53.5 151.5-114.5 217.9-181.7c66.5-67.2 126.4-140.7 178.6-218.9c52.3-78.3 96.9-161.4 133-247.9c36.1-86.5 63.8-176.2 82.6-267.6c18.8-91.4 28.6-184.4 29.6-277.4c0.3-27.6 23.2-48.7 50.8-48.4s49.5 21.8 49.2 49.5c0 0.7 0 1.3-0.1 2L1549.2 51.6z'/%3E%3Cg id='g'%3E%3Cuse href='%23s' transform='scale(0.12) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.2) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.25) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(0.3) rotate(-20)'/%3E%3Cuse href='%23s' transform='scale(0.4) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(0.5) rotate(20)'/%3E%3Cuse href='%23s' transform='scale(0.6) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.7) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.835) rotate(-40)'/%3E%3Cuse href='%23s' transform='scale(0.9) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(1.05) rotate(25)'/%3E%3Cuse href='%23s' transform='scale(1.2) rotate(8)'/%3E%3Cuse href='%23s' transform='scale(1.333) rotate(-60)'/%3E%3Cuse href='%23s' transform='scale(1.45) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(1.6) rotate(10)'/%3E%3C/g%3E%3C/defs%3E%3Cg transform='translate(40 0)'%3E%3Cg transform='translate(0 240)'%3E%3Ccircle fill='url(%23a)' r='3000'/%3E%3Cg opacity='0.5'%3E%3Ccircle fill='url(%23a)' r='2000'/%3E%3Ccircle fill='url(%23a)' r='1800'/%3E%3Ccircle fill='url(%23a)' r='1700'/%3E%3Ccircle fill='url(%23a)' r='1651'/%3E%3Ccircle fill='url(%23a)' r='1450'/%3E%3Ccircle fill='url(%23a)' r='1250'/%3E%3Ccircle fill='url(%23a)' r='1175'/%3E%3Ccircle fill='url(%23a)' r='900'/%3E%3Ccircle fill='url(%23a)' r='750'/%3E%3Ccircle fill='url(%23a)' r='500'/%3E%3Ccircle fill='url(%23a)' r='380'/%3E%3Ccircle fill='url(%23a)' r='250'/%3E%3C/g%3E%3Cg transform='rotate(-50.4 0 0)'%3E%3Cuse href='%23g' transform='rotate(10)'/%3E%3Cuse href='%23g' transform='rotate(120)'/%3E%3Cuse href='%23g' transform='rotate(240)'/%3E%3C/g%3E%3Ccircle fill-opacity='0.1' fill='url(%23a)' r='3000'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  background-attachment: fixed;
-  background-size: cover;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1008%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/rect%3e%3cpath d='M -669.7823385628976%2c404 C -573.78%2c354.6 -381.78%2c158.6 -189.7823385628976%2c157 C 2.22%2c155.4 98.22%2c391.8 290.2176614371024%2c396 C 482.22%2c400.2 578.22%2c169.8 770.2176614371024%2c178 C 962.22%2c186.2 1116.26%2c418.2 1250.2176614371024%2c437 C 1384.17%2c455.8 1402.04%2c305 1440%2c272' stroke='rgba(0%2c 128%2c 128%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M -898.6378751037885%2c326 C -802.64%2c302.8 -610.64%2c180.2 -418.6378751037884%2c210 C -226.64%2c239.8 -130.64%2c503.4 61.36212489621158%2c475 C 253.36%2c446.6 349.36%2c63.4 541.3621248962115%2c68 C 733.36%2c72.6 841.63%2c489 1021.3621248962115%2c498 C 1201.09%2c507 1356.27%2c190 1440%2c113' stroke='rgba(0%2c 128%2c 128%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M -494.97727492119515%2c134 C -398.98%2c190.2 -206.98%2c387.6 -14.977274921195125%2c415 C 177.02%2c442.4 273.02%2c268.8 465.02272507880485%2c271 C 657.02%2c273.2 753.02%2c456.2 945.0227250788049%2c426 C 1137.02%2c395.8 1326.03%2c144.2 1425.0227250788048%2c120 C 1524.02%2c95.8 1437%2c268 1440%2c305' stroke='rgba(0%2c 128%2c 128%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M -221.89623777643578%2c149 C -125.9%2c207.8 66.1%2c424.8 258.1037622235642%2c443 C 450.1%2c461.2 546.1%2c266.6 738.1037622235642%2c240 C 930.1%2c213.4 1026.1%2c343.2 1218.1037622235642%2c310 C 1410.1%2c276.8 1653.72%2c59.8 1698.1037622235642%2c74 C 1742.48%2c88.2 1491.62%2c319.6 1440%2c381' stroke='rgba(0%2c 128%2c 128%2c 1)' stroke-width='2'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1008'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
   background-attachment: fixed;
   min-height: 100vh;
@@ -794,30 +818,7 @@ main {
   gap: 2%;
 }
 
-@media only screen and (max-width: 650px) {
-  main {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-  }
-  main .card-form-wrapper {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-  }
-  main .checkout-products {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-  }
-}
-
-.card-form-wrapper {
+main .card-form-wrapper {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1 / 2;
@@ -828,12 +829,11 @@ main {
   background: rgba(0, 0, 0, 0.1);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
-  background-color: rgba(0, 0, 0, 0.1);
   padding: 5vh 5vw;
   border: solid 1px rgba(0, 0, 0, 0.1);
 }
 
-.card-form-wrapper h4 {
+main .card-form-wrapper h4 {
   text-align: center;
   border: none;
   border-bottom: solid 1px #0f1657;
@@ -841,7 +841,7 @@ main {
   color: #0f1657;
 }
 
-.card-form-wrapper form.checkout-card-form {
+main .card-form-wrapper form.checkout-card-form {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -856,7 +856,7 @@ main {
   gap: 40px;
 }
 
-.card-form-wrapper form.checkout-card-form .single-input {
+main .card-form-wrapper form.checkout-card-form .single-input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -867,15 +867,15 @@ main {
   gap: 10px;
 }
 
-.card-form-wrapper form.checkout-card-form .single-input label {
+main .card-form-wrapper form.checkout-card-form .single-input label {
   color: #0f1657;
 }
 
-.card-form-wrapper form.checkout-card-form .single-input .form-input {
+main .card-form-wrapper form.checkout-card-form .single-input .form-input {
   position: relative;
 }
 
-.card-form-wrapper form.checkout-card-form .single-input input {
+main .card-form-wrapper form.checkout-card-form .single-input input {
   margin: 0;
   padding: 10px;
   border: solid 1px transparent;
@@ -884,67 +884,62 @@ main {
   position: relative;
 }
 
-.card-form-wrapper form.checkout-card-form .single-input input:focus {
+main .card-form-wrapper form.checkout-card-form .single-input input:focus {
   outline: none;
   border: solid 1px teal;
   -webkit-box-shadow: 0px 0px 2px 2px rgba(0, 128, 128, 0.5);
           box-shadow: 0px 0px 2px 2px rgba(0, 128, 128, 0.5);
 }
 
-.card-form-wrapper form.checkout-card-form .single-input #credit-input {
+main .card-form-wrapper form.checkout-card-form .single-input #credit-input {
   padding-right: 100px;
 }
 
-.card-form-wrapper form.checkout-card-form .single-input img {
+main .card-form-wrapper form.checkout-card-form .single-input img {
   border-radius: 10px;
   position: absolute;
   right: 5px;
   top: 25%;
 }
 
-.card-form-wrapper form.checkout-card-form .payment-card-info {
+main .card-form-wrapper form.checkout-card-form .payment-card-info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 10%;
 }
 
-.card-form-wrapper form.checkout-card-form .expiration {
+main .card-form-wrapper form.checkout-card-form .expiration .form-input {
+  width: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 20px;
+  gap: 5px;
 }
 
-.card-form-wrapper form.checkout-card-form .expiration span {
+main .card-form-wrapper form.checkout-card-form .expiration span {
   color: #0f1657;
   position: relative;
-  right: 88px;
 }
 
-.card-form-wrapper form.checkout-card-form .expiration input {
+main .card-form-wrapper form.checkout-card-form .expiration input {
   width: 50%;
 }
 
-.card-form-wrapper form.checkout-card-form .expiration .form-input:last-child input {
-  position: relative;
-  right: 100px;
-}
-
-.card-form-wrapper .submit-btn button {
+main .card-form-wrapper .submit-btn button {
   padding: 15px 30px;
 }
 
-.checkout-products {
+main .checkout-products {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1 / 3;
 }
 
-.checkout-products .accordion {
+main .checkout-products .accordion {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -955,7 +950,7 @@ main {
   gap: 10px;
 }
 
-.checkout-products .accordion .card {
+main .checkout-products .accordion .card {
   background: rgba(0, 0, 0, 0.1);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
@@ -963,12 +958,12 @@ main {
   border-radius: 15px;
 }
 
-.checkout-products .card-header a {
+main .checkout-products .card-header a {
   text-decoration: none;
   color: #0f1657;
 }
 
-.checkout-products #collapseOne {
+main .checkout-products #collapseOne {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -980,7 +975,7 @@ main {
   transition: all ease 2s;
 }
 
-.checkout-products #collapseOne .pdt-card {
+main .checkout-products #collapseOne .pdt-card {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 30% 67%;
@@ -990,11 +985,11 @@ main {
   border-bottom: solid 1px #0f1657;
 }
 
-.checkout-products #collapseOne .pdt-card .img img {
+main .checkout-products #collapseOne .pdt-card .img img {
   width: 100%;
 }
 
-.checkout-products #collapseOne .pdt-card .pdt-body {
+main .checkout-products #collapseOne .pdt-card .pdt-body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1012,24 +1007,24 @@ main {
   position: relative;
 }
 
-.checkout-products #collapseOne .pdt-card .pdt-body h5 {
+main .checkout-products #collapseOne .pdt-card .pdt-body h5 {
   color: #0f1657;
   font-size: 1rem;
 }
 
-.checkout-products #collapseOne .pdt-card .pdt-body ul {
+main .checkout-products #collapseOne .pdt-card .pdt-body ul {
   padding: 0;
   margin: 0;
   gap: 20px;
 }
 
-.checkout-products #collapseOne .pdt-card .pdt-body ul li {
+main .checkout-products #collapseOne .pdt-card .pdt-body ul li {
   font-size: 0.8rem;
   color: teal;
   list-style: none;
 }
 
-.checkout-products #collapseOne .pdt-card .pdt-body p {
+main .checkout-products #collapseOne .pdt-card .pdt-body p {
   position: absolute;
   bottom: 0;
   right: 20px;
@@ -1037,13 +1032,13 @@ main {
   color: #0f1657;
 }
 
-.checkout-products #collapseOne .pdt-card.price-card {
+main .checkout-products #collapseOne .pdt-card.price-card {
   padding: 20px;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
 }
 
-.checkout-products #collapseOne .pdt-card:nth-last-child(2) ul {
+main .checkout-products #collapseOne .pdt-card:nth-last-child(2) ul {
   padding: 0;
   margin: 0;
   display: -webkit-box;
@@ -1057,7 +1052,7 @@ main {
   width: 100%;
 }
 
-.checkout-products #collapseOne .pdt-card:nth-last-child(2) ul li {
+main .checkout-products #collapseOne .pdt-card:nth-last-child(2) ul li {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1068,23 +1063,23 @@ main {
   list-style: none;
 }
 
-.checkout-products #collapseOne .pdt-card:nth-last-child(2) ul li:nth-child(1) {
+main .checkout-products #collapseOne .pdt-card:nth-last-child(2) ul li:nth-child(1) {
   color: #0f1657;
 }
 
-.checkout-products #collapseOne .pdt-card:nth-last-child(2) ul li:nth-child(2) {
+main .checkout-products #collapseOne .pdt-card:nth-last-child(2) ul li:nth-child(2) {
   color: #FF4B22;
 }
 
-.checkout-products #collapseOne .pdt-card:nth-last-child(2) ul li:nth-child(3) {
+main .checkout-products #collapseOne .pdt-card:nth-last-child(2) ul li:nth-child(3) {
   color: #7CB637;
 }
 
-.checkout-products #collapseOne .pdt-card:last-child {
+main .checkout-products #collapseOne .pdt-card:last-child {
   border-bottom: none;
 }
 
-.checkout-products #collapseOne .pdt-card:last-child li {
+main .checkout-products #collapseOne .pdt-card:last-child li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1095,27 +1090,27 @@ main {
   width: 100%;
 }
 
-.checkout-products #collapseOne .pdt-card:last-child .cta {
+main .checkout-products #collapseOne .pdt-card:last-child .cta {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   margin: 20px 0 0;
 }
 
-.checkout-products .card:is(:nth-child(2), :nth-child(3)) .card-body {
+main .checkout-products .card:is(:nth-child(2), :nth-child(3)) .card-body {
   color: teal;
 }
 
-.checkout-products .card:is(:nth-child(2), :nth-child(3)) .cta:hover {
+main .checkout-products .card:is(:nth-child(2), :nth-child(3)) .cta:hover {
   text-decoration: none;
   color: #d9d9d9;
 }
 
-.checkout-products .card:is(:nth-child(2), :nth-child(3)) a {
+main .checkout-products .card:is(:nth-child(2), :nth-child(3)) a {
   position: relative;
 }
 
-.checkout-products .card:is(:nth-child(2), :nth-child(3)) .fas {
+main .checkout-products .card:is(:nth-child(2), :nth-child(3)) .fas {
   position: absolute;
   right: 20px;
   color: teal;
@@ -1123,8 +1118,34 @@ main {
           transform: rotate(180deg);
 }
 
-.checkout-products .card:is(:nth-child(2), :nth-child(3)) a.collapsed + .fas {
+main .checkout-products .card:is(:nth-child(2), :nth-child(3)) a.collapsed + .fas {
   -webkit-transform: rotate(0deg);
           transform: rotate(0deg);
+}
+
+@media only screen and (max-width: 650px) {
+  main {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  main .card-form-wrapper {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  main .card-form-wrapper .checkout-card-form .payment-card-info .expiration .form-input {
+    width: 100%;
+  }
+  main .checkout-products {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
 }
 /*# sourceMappingURL=checkout.css.map */
