--- a/pages/styles/products.scss
+++ b/pages/styles/products.scss
@@ -57,6 +57,7 @@ main{
                         }
                     }
                     h2{
+                        text-align: left;
                         color: $primaryColor;
                     }
                     display: flex;
@@ -82,71 +83,39 @@ main{
         
         @include mq(mobile){
             grid-template-columns: 1fr;
-            padding: 2vh 8vw;
-            aside{
-                position: fixed;
-                bottom: 3vh;
-                right: 3vw;
-                z-index: 99;
-                @include centring-content();
-                
-                .aside-btn{
-                    display: none;
-                }
-                .fas.fa-bars{
-                    display: block;
-                }
-                .fas.fa-times{
-                    display: none;
-                }
-                .panel-toggle{
-                    display: block;
-                    width: fit-content;
-                    color: $secondaryColor;
-                    font-size: 1.2rem;
-                    border-radius: 10px;
-                    
-                }
-                
-                &.active{
-                    .aside-btn{
-                        display: flex;
-                        flex-direction: column;
-                        // gap: 5px;
-                        min-width: 100px;
-                        
-                        button{
-                            border-radius: 0;
-                            // border-bottom: solid 2px $primaryColor;
-                        }
-                    }
-                    
-                    .fas.fa-bars{
-                        display: none;
-                    }
-                    
-                    .fas.fa-times{
-                        display: block;
-                    }
-                }
-            }
+            padding: $paddingVer $paddingHor;
             
             .product-container.active{
-                grid-template-columns: 1fr;}
+                grid-template-columns: 1fr;
             }
-    
+
+            .product-container{
+
+                .product-cards{
+                    &:nth-child(2), &:nth-child(3){
+                        &[data-scroll = "in"]{
+                            opacity: 1;
+                            transform: scale(1);
+                        }
+            
+                        &[data-scroll="out"]{
+                            opacity: 0;
+                            transform: scale(0);
+                        }    
+                    }
+                }
+            }
         }
+    
+        
         
         @include mq(tablet){
             .product-container{
                 grid-template-columns: 1fr 1fr;
 
-                .product-cards{
-
-                }
-
             }
         }
+    }
 }
 
 
