--- a/pages/styles/checkout.css
+++ b/pages/styles/checkout.css
@@ -226,15 +226,19 @@ header .nav .logo div {
   color: teal;
   font-family: 'Playfair Display';
   font-weight: bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 header .nav .logo div p {
   color: #0f1657;
   font-size: 0.6rem;
   font-family: 'Playfair Display';
-  position: absolute;
-  top: 27px;
-  left: 0px;
 }
 
 header .nav .search-bar input {
@@ -356,11 +360,7 @@ header .nav #nav-icon {
     width: 40px;
   }
   header .nav .logo div {
-    font-size: 1.5rem;
-  }
-  header .nav .logo div p {
-    font-size: 0.6rem;
-    top: unset;
+    font-size: 1.2rem;
   }
   header .nav .search-bar input.active {
     width: 30vw;
