--- a/pages/styles/services.scss
+++ b/pages/styles/services.scss
@@ -38,11 +38,30 @@ main{
             grid-template-columns: 40% 60%;
             width: 100%;
             justify-items: start;
+            position: relative;
 
+            // &::after{
+            //     content: '';
+            //     position: absolute;
+            //     height: 100%;
+            //     width: 100%;
+            //     left: 50%;
+            //     transform: translate(-50%, 0);
+            //     text-align: center;
+            //     border-bottom: dotted 3px $primaryColor;
+            //     margin:10px;
+            // }
+
+            h3{
+                text-align: left;
+            }
             .inputs{
                 display: flex;
                 justify-content: start;
-                gap: 40px;
+                column-gap: 40px;
+                row-gap: 15px;
+                flex-wrap: wrap;
+
 
                 div{
                     display: flex;
@@ -65,6 +84,7 @@ main{
         }
 
         .form-control{
+            grid-template-columns: 1fr;
             input{
                 width: 100%;
             }
