--- a/pages/styles/login.css
+++ b/pages/styles/login.css
@@ -165,8 +165,14 @@ p a:hover {
   transition: all cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.5s;
 }
 
-input:focus + label span,
-input:valid + label span {
+input[data-filled="true"] + label span {
+  color: #0f1657;
+  -webkit-transform: translateY(-20px);
+          transform: translateY(-20px);
+}
+
+input[data-filled='false']:focus + label span,
+input[data-filled='false']:valid + label span {
   color: #0f1657;
   -webkit-transform: translateY(-20px);
           transform: translateY(-20px);
@@ -294,38 +300,6 @@ header .nav li a {
 header .nav li a:hover {
   padding-bottom: 5px;
   border-bottom: solid 3px #0f1657;
-}
-
-header .nav li.current {
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: relative;
-}
-
-header .nav li.current::after {
-  content: '';
-  position: absolute;
-  top: -10px;
-  bottom: -10px;
-  left: -10px;
-  right: -10px;
-  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-  background-color: #0f1657;
-}
-
-header .nav li.current a {
-  position: relative;
-  z-index: 99;
-  color: #d9d9d9;
 }
 
 header .nav li .cta-nav.login {
