--- a/styles/_generals.scss
+++ b/styles/_generals.scss
@@ -223,12 +223,20 @@ p a{
         min-width: 5px;
         position: relative;
         transition: all cubic-bezier(0.68, -0.55, 0.265, 1.55) .5s;
+
     }
+    
 
     
 }
-input:focus + label span,
-input:valid + label span{
+
+input[data-filled="true"] +label span{
+    color: $primaryColor;
+    transform: translateY(-20px);
+}
+
+input[data-filled='false']:focus + label span,
+input[data-filled='false']:valid + label span{
     color: $primaryColor;
     transform: translateY(-20px);
 }
@@ -331,24 +339,24 @@ header{
                 @include nav-link();
             }
 
-            li.current{
-                height: 100%;
-                @include centring-content();
-                position: relative;
-                &::after{
-                    content: '';
-                    position: absolute;
-                    top: -10px; bottom: -10px;
-                    left: -10px; right: -10px;
-                    box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
-                    background-color: $primaryColor;
-                }
-                a{
-                    position: relative;
-                    z-index: 99;
-                    color: $tertiaryColor;
-                }
-            }
+            // li.current{
+            //     height: 100%;
+            //     @include centring-content();
+            //     position: relative;
+            //     &::after{
+            //         content: '';
+            //         position: absolute;
+            //         top: -10px; bottom: -10px;
+            //         left: -10px; right: -10px;
+            //         box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
+            //         background-color: $primaryColor;
+            //     }
+            //     a{
+            //         position: relative;
+            //         z-index: 99;
+            //         color: $tertiaryColor;
+            //     }
+            // }
 
             li .cta-nav.login{
                 color: $primaryColor;
