--- a/styles/style.css
+++ b/styles/style.css
@@ -165,8 +165,14 @@ p a:hover {
   transition: all cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.5s;
 }
 
-input:focus + label span,
-input:valid + label span {
+input[data-filled="true"] + label span {
+  color: #0f1657;
+  -webkit-transform: translateY(-20px);
+          transform: translateY(-20px);
+}
+
+input[data-filled='false']:focus + label span,
+input[data-filled='false']:valid + label span {
   color: #0f1657;
   -webkit-transform: translateY(-20px);
           transform: translateY(-20px);
@@ -294,38 +300,6 @@ header .nav li a {
 header .nav li a:hover {
   padding-bottom: 5px;
   border-bottom: solid 3px #0f1657;
-}
-
-header .nav li.current {
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: relative;
-}
-
-header .nav li.current::after {
-  content: '';
-  position: absolute;
-  top: -10px;
-  bottom: -10px;
-  left: -10px;
-  right: -10px;
-  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-  background-color: #0f1657;
-}
-
-header .nav li.current a {
-  position: relative;
-  z-index: 99;
-  color: #d9d9d9;
 }
 
 header .nav li .cta-nav.login {
@@ -1118,6 +1092,25 @@ aside .aside-btn button:last-child {
   }
 }
 
+@media only screen and (min-width: 650px) and (max-width: 1024px) {
+  .services .card-container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    margin-bottom: 10%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    justify-items: center;
+  }
+  .services .card-container .card:last-child {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+  }
+}
+
 .products {
   padding: 5vh 5vw;
   min-height: 80vh;
@@ -1244,6 +1237,20 @@ aside .aside-btn button:last-child {
   }
 }
 
+@media only screen and (min-width: 650px) and (max-width: 1024px) {
+  .products .card-container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    justify-items: center;
+    margin: 10% auto;
+  }
+}
+
 .about {
   padding: 5vh 5vw;
   min-height: 80vh;
@@ -1321,7 +1328,7 @@ aside .aside-btn button:last-child {
   background-color: #0f1657;
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 650px), only screen and (min-width: 650px) and (max-width: 1024px) {
   .about .about-content {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
