--- a/styles/style.scss
+++ b/styles/style.scss
@@ -236,6 +236,20 @@
             gap: 7vh;
         }
     }
+    @include mq(tablet){
+
+        .card-container{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            margin-bottom: 10%;
+            align-items: center;
+            justify-items: center;
+            .card:last-child{
+                grid-column: 1/3;
+            }
+        }
+
+    }
 }
 
 // Products Section
@@ -317,6 +331,16 @@
         }
     }
 
+    @include mq(tablet){
+        .card-container{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            align-items: center;
+            justify-items: center;
+            margin:10% auto;
+        }
+    }
+
 }
 
 //About
@@ -381,7 +405,7 @@
         }
     }
 
-    @include mq(mobile){
+    @include mq([mobile tablet]){
         .about-content{
             grid-template-columns: 1fr;
             grid-template-rows: auto auto;
